small edits to posrt styles and general engineering

--- a/_layouts/simple.html
+++ b/_layouts/simple.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
+<div class="post simple">
 {{ content }}
 </div>
+<p class="image-post-caption">{{ page.title }}</h2>
+
